# robust-qa

./: Cargo.toml  README.md  job.err  job.out  robust_curves_full.html
analysis/: .nfs00000000088169f20001b1ca  Cargo.toml
analysis/src/: .nfs0000000008812e5b0001b1c5  .nfs00000000088207e90001b1bb  .nfs000000001057f3d10001b1c4  compute_robust.rs  main.rs  plotting.rs
analysis/src/data/: .nfs000000001057f3d70001b1c1  .nfs000000001057f3d80001b1c0  .nfs000000001057f7f90001b1be  .nfs00000000105811300001b1bd  .nfs00000000105811510001b1bf  columnar.rs  loader.rs  sqlite.rs  utils.rs
analysis/src/metrics/: .nfs000000001057f3db0001b1c9  precision.rs
analysis/src/plot/: .nfs00000000105810a40001b1c2  mod.rs
backend/: Cargo.toml
backend/src/: api.rs  database.rs  db.rs  main.rs  model.rs  server.rs
src/: compute_robust.rs  lib.rs  main.rs  plot.rs  plot_corr.rs
src/data/: .nfs000000001057e8690001b156  columnar.rs  loader.rs  mod.rs  utils.rs
src/metrics/: precision.rs
src/plot/: to_vite.rs
