[package]
name = "uq_project"
version = "0.1.0"
edition = "2021"

[dependencies]
plotly = "0.7"    
rand = "0.8" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "3.3"
rayon = "=1.9.0"     
rayon-core = "=1.12.1"  
itertools = "0.10"
interp1d = "0.2"
polars = { version = "0.32", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
comfy-table = { version = "6.0.0-rc.1" }

