[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
plotly = "0.7"    
rand = "0.8" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "3.3"
rayon = "=1.9.0"     
rayon-core = "=1.12.1"  
itertools = "0.10"
interp1d = "0.2"
anyhow = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
bincode = "1.3"

tokio = { version = "1", features = ["full"] }
indicatif = "0.18"   # For progress bars
crossbeam = "0.8"    # Optional: faster lock-free channels if needed
futures = "0.3" 


